* And here it is... The new Zoomedia! Fully hardware-accelerated, way faster than in the previous rev (60 FPS on mobile, when it used to be ~10 FPS before); it's damn close to pixel perfection, I killed all of the bugs I could find (and believe me, there were tons of them), and guess what-- it also restores the software animation on old browsers, and makes it much faster than before, too. I also documented some of my code, because I got lost in my own, and I only wrote it a few years back, so I added warnings here and there about why I did things that way and not another... Cross-browser compatibility *really* is a bitch, I'm telling you. I worked exclusively on that for two straight days. (zoomedia.js, zoom.css)
* Zoomedia items will now adapt to the current viewport, rather than screen size. Good if you're in zoom mode. (zoomedia.js)

* You can now freely set a custom Zoomedia animation speed in zoom.css (or, better, a custom file of yours); the JS will detect it. If HW isn't available, Zoomedia falls back to a 500ms regular animation. (zoomedia.js, zoom.css)

* Zoomedia now uses the default Ajax loader, and as such no longer needs some of the related stuff. (zoomedia.js, zoom.css, Media.language.php)

! Fixed thumbnail description showing up on top of the popup during its animation process. (zoomedia.js, zoom.css)

! Fixed popup centering when it's adapted to fit the screen size. (zoomedia.js)

- Removed the noScale option. Zoomedia isn't, and never planned to be, a perfect reproduction of Highslide. (Which, BTW, is now officially much slower than Zoomedia... :P) (zoomedia.js)

- Forgot to remove the previously deprecated 'duration' setting from the JS file itself. (zoomedia.js)

@ There was a strange bug in IE 6-9 that I never got to fix, where doing $zoom.height('auto') at one point would be randomly ignored (!), thus NOT removing the CSS height value. I really couldn't fix it, so instead I added a workaround by forcing the same operation again after the end of

--- a/Themes/default/skins/zoom.css
+++ b/Themes/default/skins/zoom.css
@@ -6,34 +6,30 @@
 
 .zoom mixes .inline-block
 	position: @is (ie[-7], "static", "relative")
+	max-width: 100%
 
-.zoom-base virtual
+/*
+	This is the main component. You can set a custom animation speed (for instance, in custom.css)
+	by overriding the .anim class; you may use either 's' (second) or 'ms' (millisecond) values.
+	Browsers with no support for transitions will use a value of 700ms by default.
+	For instance, add this to your custom.css (or zoom.global.css) file to speed up the animations:
+
+	#zoom.anim
+		transition: transform .3s, opacity .3s
+*/
+#zoom
 	// We set visibility to hidden to avoid getting 0 on child zoom-desc's height
-	visibility: hidden
 	position: absolute
-	top, left: 0
+	top, left, opacity: 0
 	background: #fff
 	border: 1px solid #ccc
 	box-shadow: 0 0 18px #666
 	border-radius: 8px
-	z-index: 1
-
-#zoom
-	opacity: 0
-	visibility: hidden
-	transform: rotateX(10deg)
-
-#zoom.anim
-	opacity: 1
-	visibility: visible
-	transform: rotateX(0)
-	transition: left .8s, top .8s, width .8s, height .8s, opacity .8s, transform .8s
-
-#zoom.animated
-	opacity: 1
-	visibility: visible
-	transform: rotateX(0)
-	transition: none
+	z-index: 11
+	&.anim
+		transition: transform .6s, opacity .7s
+	&.animdone
+		transition: none
 
 #zoom-content
 	padding: 10px
@@ -81,22 +77,7 @@
 	width, height: 34px
 */
 
-.zoom-loading
-	position: absolute
-	color: black
-	font-size: 8pt
-	font-weight: 700
-	text-transform: uppercase
-	padding: 3px 5px 3px 10px
-	border: 1px solid rgba(255,255,255, .25)
-	border-radius: 8px
-	background: rgba(255,255,255, .5)
-	height, line-height: 20px
-	z-index: 1000
-	span extends .loading
-		margin-right: 10px
-
-.zoom-drop-shadow extends .zoom-base
+.zoom-drop-shadow
 	background: #777
 	border: 0
 	#zoom-content
@@ -116,11 +97,11 @@
 	h3, .title final
 		color: #e2e8d8
 
-.zoom-white extends .zoom-base
-.zoom-glass extends .zoom-base
+.zoom-white
+.zoom-glass
 	background: linear-gradient(0deg, #fff, rgba(255,255,255, .9) 100px, rgba(128,128,128, .5))
 
-.zoom-black extends .zoom-base
+.zoom-black
 	background: #000
 	border: 1px solid #333
 	.zoom-desc-contain, .zoom-html
